--- a/style.css
+++ b/style.css
@@ -4,13 +4,21 @@
 
 .overlay {
     /* Sit on top of the page content */
+    position: fixed;
     /* Full width (cover the whole page) */
+    width: 100%;
     /* Full height (cover the whole page) */
+    height: 100%;
     /* Stay at the top */
+    top : 0;
     /* Stay at the left */
+    left : 0;
     /* Stay at the right */
+    right : 0;
     /* Stay at the bottom */
+    bottom : 0;
     /* Black background with opacity */
+    background-color: rgba(0, 0, 0, 0.9);
     /* Add a pointer on hover */
     /* Use a grid for easy centering */
     /* Center vertically and horizontally */
