--- a/style.css
+++ b/style.css
@@ -1,5 +1,24 @@
 .vrac {
-    "X" #000 #fff #fff 2px solid 0 0 0 0 0 100% 100% 100% 1rem 1rem 1rem 2px solid #fff 2rem 2rem 2rem 50% absolute auto background-color background-color block border border border-radius bottom center center color content cursor display display fixed font-family grid height height height left line-height margin max-width padding place-content pointer position position rgba(0, 0, 0, 0.9) right right sans-serif text-align top top width width
+    background-color: #000;
+    color: #fff;
+    border: 2px solid #fff;
+    border-radius: 1rem;
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    max-width: 2rem;
+    padding: 2rem;
+    margin: auto;
+    font-family: sans-serif;
+    line-height: 2rem;
+    text-align: center;
+    cursor: pointer;
+    content: "X";
 }
 
 .overlay {
@@ -10,13 +29,13 @@
     /* Full height (cover the whole page) */
     height: 100%;
     /* Stay at the top */
-    top : 0;
+    top: 0;
     /* Stay at the left */
-    left : 0;
+    left: 0;
     /* Stay at the right */
-    right : 0;
+    right: 0;
     /* Stay at the bottom */
-    bottom : 0;
+    bottom: 0;
     /* Black background with opacity */
     background-color: rgba(0, 0, 0, 0.9);
     /* Add a pointer on hover */
@@ -26,28 +45,47 @@
 
 .overlay::after {
     /* Add content : "X" */
+    content: "X";
     /* White text color */
+    color: white;
     /* Black background color */
+    background-color: black;
     /* Font family "sans-serif" */
+    font-family: "sans-serif";
     /* Centered text */
+    text-align: center;
     /* Line height ( idem height ) */
+    line-height: 2rem;
     /* Display as a block */
+    display: block;
     /* Position absolute */
+    position: absolute;
     /* 1rem from the top */
+    top: 1rem;
     /* 1rem from the right */
+    right: 1rem;
     /* 2rem width */
+    width: 2rem;
     /* 2rem height */
+    height: 2rem;
     /* White border of 2px */
+    border: 2px solid #fff;
     /* Rounded border */
+    border-radius: 50%;
 }
 
 .overlay>figure {
     /* No margin */
+    margin: 0;
     /* 1rem padding */
+    padding: 1rem;
     /* White border of 2px */
+    border: 2px solid white;
 }
 
 .overlay>figure>img {
     /* Max width 100% for responsive image */
+    max-width: 100%;
     /* Height auto for keeping the ratio */
+    height: auto;
 }
